# logdiver

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
logdiver/: __init__.py  app.py  main.py  parser.py
logdiver/widgets/: __init__.py  filter_bar.py  header.py  log_view.py
